# agentic-time

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
crates/agentic-time/: Cargo.toml
crates/agentic-time-cli/: Cargo.toml
crates/agentic-time-cli/src/: main.rs
crates/agentic-time-cli/src/commands/: deadline.rs  decay.rs  mod.rs  schedule.rs  sequence.rs
crates/agentic-time-core/: Cargo.toml
crates/agentic-time-core/src/: lib.rs  types.rs
crates/agentic-time-ffi/: Cargo.toml
crates/agentic-time-ffi/include/: agentic_time.h
crates/agentic-time-ffi/src/: lib.rs
crates/agentic-time-mcp/: Cargo.toml
crates/agentic-time-mcp/src/: ghost_bridge.rs  greeting.rs  invention_exploration.rs  invention_management.rs  invention_protection.rs  lib.rs  main.rs  prompts.rs  resources.rs  server.rs  stdio.rs  tools.rs
crates/agentic-time-mcp/tests/: edge_cases_inventions.rs
crates/agentic-time/benches/: benchmarks.rs
crates/agentic-time/src/: bridges.rs  contracts.rs  deadline.rs  decay.rs  duration.rs  error.rs  file_format.rs  inventions.rs  lib.rs  query_engine.rs  schedule.rs  sequence.rs  write_engine.rs
crates/agentic-time/src/indexes/: deadline_index.rs  decay_index.rs  mod.rs  sequence_index.rs
crates/agentic-time/tests/: conservation_test.rs  stress_tests.rs
docs/public/: api-reference.md  architecture.md  benchmarks.md  cli-reference.md  command-surface.md  concepts.md  configuration.md  experience-with-vs-without.md  faq.md  ffi-reference.md  file-format.md  initial-problem-coverage.md  installation.md  integration-guide.md  mcp-prompts.md  mcp-resources.md  mcp-tools.md  overview.md  primary-problem-coverage.md  quickstart.md  runtime-install-sync.md  sister.manifest.json  troubleshooting.md
npm/wasm/: Cargo.toml
npm/wasm/src/: lib.rs
paper/paper-i-temporal-format/: agentictime-paper.aux  agentictime-paper.bbl  agentictime-paper.blg  agentictime-paper.out  agentictime-paper.tex  references.bib
planning-docs/: AGENTIC-TIME-12-INVENTIONS.md  AGENTIC-TIME-4-TIME-TRAVEL-INVENTIONS.md  AGENTIC-TIME-CLAUDE-CODE-INSTRUCTIONS.md  AGENTIC-TIME-COMPLETE-SPEC.md  LLM-PROBLEM-LANDSCAPE-TIME.md  PROGRESS-CHECKLIST.md  READ-ME-FIRST.md  SISTER-REFERENCE-GUIDE.md
python/: .coverage  README.md  pyproject.toml
python/src/agentic_time/: __init__.py
python/tests/: test_time_graph.py
scripts/: check-canonical-sister.sh  check-install-commands.sh  check-runtime-hardening.sh  install.sh  test-primary-problems.sh
tests/integration/: cli_tests.rs
