[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "agentic-time"
version = "0.1.0"
description = "Temporal reasoning for AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "Agentra Labs"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]
keywords = ["ai", "agents", "temporal", "reasoning", "mcp"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
