[package]
name = "agentic-time-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for AgenticTime"

[[bin]]
name = "atime"
path = "src/main.rs"

[dependencies]
agentic-time = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { workspace = true }
