[package]
name = "agentic-time-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core temporal reasoning library for AgenticTime"

[dependencies]
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
chrono = { version = "0.4", features = ["serde"] }
