[package]
name = "agentic-time-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "FFI bindings for AgenticTime"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
agentic-time = { workspace = true }
serde_json = { workspace = true }
libc = "0.2"
