[package]
name = "agentic-time-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server for AgenticTime"
keywords = ["mcp", "llm", "time", "agent", "ai"]
categories = ["development-tools", "date-and-time"]

[[bin]]
name = "agentic-time-mcp"
path = "src/main.rs"

[dependencies]
agentic-time = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
