[package]
name = "agentic-time"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Temporal reasoning for AI agents"
keywords = ["ai", "agents", "time", "temporal", "scheduling"]
categories = ["data-structures", "date-and-time"]

[dependencies]
# Contracts (shared sister traits)
agentic-contracts = { workspace = true }

chrono = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10"
rand = "0.8"

[[bench]]
name = "benchmarks"
harness = false
