[package]
name = "agentic-time"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Temporal reasoning for AI agents"
keywords = ["ai", "agents", "time", "temporal", "scheduling"]
categories = ["data-structures", "date-and-time"]

[dependencies]
# SDK (shared sister traits)
agentic-sdk = { workspace = true }

chrono = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10"
rand = "0.8"
serde_json = "1.0"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "mcp_bench"
harness = false

[[bench]]
name = "core_bench"
harness = false

[[bench]]
name = "stress_bench"
harness = false
